# task_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: SupervisionCommand.msg  SupervisionPreference.msg  SupervisionSettings.msg  Task.msg  TaskCost.msg  TaskCosts.msg  TaskDetails.msg  TaskState.msg  TasksModel.msg
srv/: AddTask.srv  AllocateTask.srv  GetTask.srv  GetTaskState.srv  SetTaskParam.srv  SetTaskState.srv  SetTaskType.srv
